--- a/index.html
+++ b/index.html
@@ -48,77 +48,91 @@
                         <h2 class="card-title">Germany</h2>
                         <p class="card-desc"><strong>Population:</strong> 81,770,900</p>
                         <p class="card-desc"><strong>Region:</strong> Europe</p>
-                        <p class="card-desc"><strong>Capital:</strong> Berlin</p>
+                        <p class="card-desc"><strong>Capital:</strong> Washington</p>
                     </div>
                 </li>
 
                 <li class="card-list-item col-12">
-                    <img src="./images/usa-flag.jpg" width="264" height="160" alt="Germany flag">
+                    <a href="./usa.html">
+                        <img src="./images/usa-flag.jpg" width="264" height="160" alt="Germany flag">
+                    </a>
                     <div class="card-subbox">
-                        <h2 class="card-title">Germany</h2>
-                        <p class="card-desc"><strong>Population:</strong> 81,770,900</p>
-                        <p class="card-desc"><strong>Region:</strong> Europe</p>
-                        <p class="card-desc"><strong>Capital:</strong> Berlin</p>
+                        <h2 class="card-title">United States of America</h2>
+                        <p class="card-desc"><strong>Population:</strong> 323,947,000</p>
+                        <p class="card-desc"><strong>Region:</strong> Americas</p>
+                        <p class="card-desc"><strong>Capital:</strong> Washington</p>
                     </div>
                 </li>
 
                 <li class="card-list-item col-12">
-                    <img src="./images/brazil-flag.jpg" width="264" height="160" alt="Germany flag">
+                    <a href="./brasil.html">
+                        <img src="./images/brazil-flag.jpg" width="264" height="160" alt="Germany flag">
+                    </a>
                     <div class="card-subbox">
-                        <h2 class="card-title">Germany</h2>
-                        <p class="card-desc"><strong>Population:</strong> 81,770,900</p>
-                        <p class="card-desc"><strong>Region:</strong> Europe</p>
-                        <p class="card-desc"><strong>Capital:</strong> Berlin</p>
+                        <h2 class="card-title">Brazil</h2>
+                        <p class="card-desc"><strong>Population:</strong> 206,135,893</p>
+                        <p class="card-desc"><strong>Region:</strong> Americas</p>
+                        <p class="card-desc"><strong>Capital:</strong> Brasília</p>
                     </div>
                 </li>
 
                 <li class="card-list-item col-12">
-                    <img src="./images/iceland-flag.jpg" width="264" height="160" alt="Germany flag">
+                    <a href="./iceland.html">
+                        <img src="./images/iceland-flag.jpg" width="264" height="160" alt="Germany flag">
+                    </a>
                     <div class="card-subbox">
-                        <h2 class="card-title">Germany</h2>
+                        <h2 class="card-title">Iceland</h2>
                         <p class="card-desc"><strong>Population:</strong> 81,770,900</p>
                         <p class="card-desc"><strong>Region:</strong> Europe</p>
-                        <p class="card-desc"><strong>Capital:</strong> Berlin</p>
+                        <p class="card-desc"><strong>Capital:</strong> Reykjavík</p>
                     </div>
                 </li>
 
                 <li class="card-list-item col-12">
-                    <img src="./images/afganistan-flag.jpg" width="264" height="160" alt="Germany flag">
+                    <a href="./afganistan.html">
+                        <img src="./images/afganistan-flag.jpg" width="264" height="160" alt="Germany flag">
+                    </a>
                     <div class="card-subbox">
-                        <h2 class="card-title">Germany</h2>
+                        <h2 class="card-title">Afghanistan</h2>
                         <p class="card-desc"><strong>Population:</strong> 81,770,900</p>
-                        <p class="card-desc"><strong>Region:</strong> Europe</p>
-                        <p class="card-desc"><strong>Capital:</strong> Berlin</p>
+                        <p class="card-desc"><strong>Region:</strong> Asia</p>
+                        <p class="card-desc"><strong>Capital:</strong> Kabul</p>
                     </div>
                 </li>
 
                 <li class="card-list-item col-12">
-                    <img src="./images/aland-flag.jpg" width="264" height="160" alt="Germany flag">
+                    <a href="./aland.html">
+                        <img src="./images/aland-flag.jpg" width="264" height="160" alt="Germany flag">
+                    </a>
                     <div class="card-subbox">
-                        <h2 class="card-title">Germany</h2>
+                        <h2 class="card-title">Åland Islands</h2>
                         <p class="card-desc"><strong>Population:</strong> 81,770,900</p>
                         <p class="card-desc"><strong>Region:</strong> Europe</p>
-                        <p class="card-desc"><strong>Capital:</strong> Berlin</p>
+                        <p class="card-desc"><strong>Capital:</strong> Mariehamn</p>
                     </div>
                 </li>
 
                 <li class="card-list-item col-12">
-                    <img src="./images/albania-flag.jpg" width="264" height="160" alt="Germany flag">
+                    <a href="./albania.html">
+                        <img src="./images/albania-flag.jpg" width="264" height="160" alt="Germany flag">
+                    </a>
                     <div class="card-subbox">
-                        <h2 class="card-title">Germany</h2>
+                        <h2 class="card-title">Albania</h2>
                         <p class="card-desc"><strong>Population:</strong> 81,770,900</p>
                         <p class="card-desc"><strong>Region:</strong> Europe</p>
-                        <p class="card-desc"><strong>Capital:</strong> Berlin</p>
+                        <p class="card-desc"><strong>Capital:</strong> Tirana</p>
                     </div>
                 </li>
 
                 <li class="card-list-item col-12">
-                    <img src="./images/algeria-flag.jpg" width="264" height="160" alt="Germany flag">
+                    <a href="./algeria.html">
+                        <img src="./images/algeria-flag.jpg" width="264" height="160" alt="Germany flag">
+                    </a>
                     <div class="card-subbox">
-                        <h2 class="card-title">Germany</h2>
+                        <h2 class="card-title">Algeria</h2>
                         <p class="card-desc"><strong>Population:</strong> 81,770,900</p>
-                        <p class="card-desc"><strong>Region:</strong> Europe</p>
-                        <p class="card-desc"><strong>Capital:</strong> Berlin</p>
+                        <p class="card-desc"><strong>Region:</strong> Africa</p>
+                        <p class="card-desc"><strong>Capital:</strong> Algiers</p>
                     </div>
                 </li>
             </ul>
